@@ -1,5 +1,10 @@
 2004-05-07  Bruno Haible  <bruno@clisp.org>
 
+	* makemake.in (CC_CPLUSPLUS): New variable.
+	(XCFLAGS): When using g++ >= 3.4, add -Wno-invalid-offsetof.
+
+2004-05-07  Bruno Haible  <bruno@clisp.org>
+
 	* clos-package.lisp: Trivially import a few symbols not yet defined.
 
 2004-04-24  Bruno Haible  <bruno@clisp.org>
